tests/outref/TUC003.ref
OCTO> select * from names where notathing = 0; select * from names limit 1;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: NOTATHING
Error with syntax near (line 1, column 26):

select * from names where notathing = 0; select * from names limit 1;
                          ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where notathing = 0;
0|Zero|Cool
OCTO> 
